--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,10 @@
     <!-- <link rel="icon" type="image/png" href="<%= BASE_URL %>favicon.ico"> -->
     <link rel="icon" type="image/png" href="Movie.png">
     <!-- <title><%= htmlWebpackPlugin.options.title %></title> -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Silkscreen:wght@400;700&display=swap" rel="stylesheet">
     <title>Film Finder</title>
   </head>
   <body>
